--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -586,3 +585,6 @@ lines = 0
 [window.padding]
 x = 2
 y = 2
+
+[general]
+live_config_reload = true
