--- a/scripts/local-sway.d/sway.conf
+++ b/scripts/local-sway.d/sway.conf
@@ -10,6 +10,8 @@ packages+=(
 
   wofi rofi-wayland
 
+  wlsunset
+
   # need ruby in the base system so that ruby scripts have easy access to
   # swaymsg and the sway socket
   ruby
