.config/sway: Minor updates.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -88,12 +88,16 @@
 # Startup
 #
 
+# exec_always {
+#   systemctl --user import-environment PATH
+# }
+
 exec {
   # https://github.com/emersion/xdg-desktop-portal-wlr/wiki/systemd-user-services,-pam,-and-environment-variables
-  #exec systemctl --user import-environment XDG_CURRENT_DESKTOP
+  #systemctl --user import-environment XDG_CURRENT_DESKTOP
 
   # https://github.com/emersion/xdg-desktop-portal-wlr/tree/28a82d05685dfe23be2adc798537a2db6bb98a7f#running
-  exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+  dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
   # All the stuff we need to start should be in ~/.config/autostart as
   # .desktop-files. To see what is being done you can add -d for dry-run:
