--- a/scripts/bootc/Containerfile
+++ b/scripts/bootc/Containerfile
@@ -1,16 +1,39 @@
 #FROM quay.io/fedora/fedora-bootc:41
 FROM quay.io/fedora/fedora-silverblue:41
+#FROM quay.io/fedora/fedora-silverblue:42
 
+# Install rpmfusion GPG keys before anything else:
+RUN dnf install -y distribution-gpg-keys \
+  && rpmkeys --import /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-free-fedora-41 \
+  && dnf --setopt=localpkg_gpgcheck=1 install -y https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-41.noarch.rpm
+
+# Install RPMFusion:
 RUN dnf install -y \
+  https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-41.noarch.rpm \
+  https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-41.noarch.rpm \
+  && dnf config-manager setopt fedora-cisco-openh264.enabled=1
+
+RUN dnf install -y --skip-unavailable \
   bootc \
   brightnessctl \
+  containerd.io \
   dex-autostart \
   distrobox \
   fzf \
+  gnome-network-displays \
   grim \
   grimshot \
+  gstreamer1-plugins-bad-free-extras \
+  gstreamer1-plugins-bad-freeworld \
+  gstreamer1-plugins-ugly \
+  gstreamer1-vaapi \
   i3status \
+  libavcodec-freeworld \
+  libva-utils \
   lxpolkit \
+  mesa-va-drivers-freeworld \
+  mesa-vdpau-drivers-freeworld \
+  obs-studio \
   pamixer \
   perl \
   rofi-wayland \
@@ -21,12 +44,16 @@ RUN dnf install -y \
   swaybg \
   swayidle \
   swaylock \
+  SwayNotificationCenter \
   tmux \
+  vdpauinfo \
   waybar \
   wlsunset \
   wofi \
   zenity \
   && dnf clean all
+
+RUN dnf remove -y firefox firefox-langpacks
 
 WORKDIR /
 
