--- a/scripts/bootc/Containerfile
+++ b/scripts/bootc/Containerfile
@@ -2,13 +2,18 @@
 FROM quay.io/fedora/fedora-silverblue:41
 #FROM quay.io/fedora/fedora-silverblue:42
 
+# We'll use flatpak version of firefox and having both installed can be
+# confusing:
+RUN dnf remove -y firefox firefox-langpacks
+
 # Install rpmfusion GPG keys before anything else:
-RUN dnf install -y distribution-gpg-keys \
-  && rpmkeys --import /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-free-fedora-41 \
-  && dnf --setopt=localpkg_gpgcheck=1 install -y https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-41.noarch.rpm
+# RUN dnf install -y distribution-gpg-keys \
+RUN rpmkeys --import \
+  /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-nonfree-fedora-41 \
+  /usr/share/distribution-gpg-keys/rpmfusion/RPM-GPG-KEY-rpmfusion-free-fedora-41
 
 # Install RPMFusion:
-RUN dnf install -y \
+RUN dnf install -y --setopt=localpkg_gpgcheck=1 \
   https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-41.noarch.rpm \
   https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-41.noarch.rpm \
   && dnf config-manager setopt fedora-cisco-openh264.enabled=1
@@ -52,8 +57,6 @@ RUN dnf install -y --skip-unavailable \
   wofi \
   zenity \
   && dnf clean all
-
-RUN dnf remove -y firefox firefox-langpacks
 
 WORKDIR /
 
