--- a/scripts/bootc/build
+++ b/scripts/bootc/build
@@ -22,4 +22,7 @@ base_image=quay.io/fedora/fedora-silverblue:41
   # since `bootc switch` needs to run as root we also need to build as root to
   # make sure the container ends up in the root users container storage:
   sudo buildah build --layers --tag "$repo":"$tag" --file "$containerfile"
+
+  # old unlabled images will fill up quickly if we don't remove them:
+  sudo podman image prune
 )
