--- a/scripts/local-sway.d/sway.conf
+++ b/scripts/local-sway.d/sway.conf
@@ -11,6 +11,7 @@ packages+=(
   wofi rofi-wayland
 
   wlsunset
+  wl-mirror
 
   # need ruby in the base system so that ruby scripts have easy access to
   # swaymsg and the sway socket
