sway: Allow fullscreen browser windows to inhibit idle

--- a/.config/sway/theme-air.config
+++ b/.config/sway/theme-air.config
@@ -16,6 +16,8 @@
 
   # xwayland:
   for_window [instance="chromium-browser"] inhibit_idle fullscreen
+  for_window [instance="google-chrome"] inhibit_idle fullscreen
+  for_window [instance="org.chromium.Chromium"] inhibit_idle fullscreen
 
 ### Focus
 
