.config/sway/config: export all environment variables

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -99,6 +99,9 @@ exec {
   # https://github.com/emersion/xdg-desktop-portal-wlr/tree/28a82d05685dfe23be2adc798537a2db6bb98a7f#running
   dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
+  # Needed to get intune to work it seems (export DISPLAY and keyring and such?):
+  dbus-update-activation-environment --all
+
   # All the stuff we need to start should be in ~/.config/autostart as
   # .desktop-files. To see what is being done you can add -d for dry-run:
   # $ dex-autostart -e sway -ad
