--- a/scripts/bootc/build
+++ b/scripts/bootc/build
@@ -9,7 +9,7 @@ containerfile=$(readlink -f Containerfile)
 
 repo=${1:-localhost/$(hostname)}
 tag=latest
-base_image=$(head "$containerfile" | grep ^FROM | awk '{print $2}')
+base_image=$(head "$containerfile" | grep ^FROM | awk '{print $2}' | head -1)
 
 (
   set -x
