.config/sway: Add yubico-authenticator hotkey

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -18,6 +18,7 @@ bindsym {
 
   $mod+b exec "~/bin/,bitwarden"
   $mod+p exec 1password --quick-access
+  $mod+y exec yubico-authenticator
 
   --locked XF86MonBrightnessUp exec brightnessctl s +10%
   --locked XF86MonBrightnessDown exec brightnessctl s 10%-
