.config/sway: hotkey for mirror

--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -16,6 +16,8 @@ bindsym {
   XF86Calculator exec ~/bin/calculator
   XF86Favorites exec "~/bin/,bitwarden"
 
+  XF86Display exec "~/bin/,wl-mirror-eDP-1"
+
   $mod+b exec "~/bin/,bitwarden"
   $mod+p exec 1password --quick-access
   $mod+y exec yubico-authenticator
