--- a/.config/sway/hotkeys.config
+++ b/.config/sway/hotkeys.config
@@ -22,6 +22,11 @@ bindsym {
   --locked XF86MonBrightnessUp exec brightnessctl s +10%
   --locked XF86MonBrightnessDown exec brightnessctl s 10%-
 
+  # XF86Display
+  # XF86Messenger
+  # XF86Go
+  # XF86Cancel / Cancel ?
+
   # in case missing/broken brightness buttons:
   --locked $mod+up exec brightnessctl s +10%
   --locked $mod+down exec brightnessctl s 10%-
