scripts/local niri: Use correct fedora version.

--- a/scripts/local-sway.d/niri.conf
+++ b/scripts/local-sway.d/niri.conf
@@ -7,6 +7,6 @@ packages+=(
 )
 
 repo_filename="_copr:copr.fedorainfracloud.org:yalter:niri.repo"
-repo_url="https://copr.fedorainfracloud.org/coprs/yalter/niri/repo/fedora-42/yalter-niri-fedora-42.repo"
+repo_url="https://copr.fedorainfracloud.org/coprs/yalter/niri/repo/fedora-${fedora_version}/yalter-niri-fedora-${fedora_version}.repo"
 
 repos[$repo_filename]="$repo_url"
