.config/waybar-river: rewrite slack title

--- a/.config/waybar-river/config.jsonc
+++ b/.config/waybar-river/config.jsonc
@@ -30,6 +30,7 @@
     "rewrite": {
       "(.*) — Mozilla Firefox.*": "$1",
       "(.*) - Chromium.*": "$1",
+      "(.*) - Slack.*": "$1",
     }
   },
 	
