.config/waybar-river: add privacy sink

--- a/.config/waybar-river/config.jsonc
+++ b/.config/waybar-river/config.jsonc
@@ -10,6 +10,7 @@
 	"modules-center": ["niri/window"],
   "modules-right": [
     "custom/camera",
+    "privacy#sink",
     "privacy",
     "tray",
     "bluetooth",
@@ -59,15 +60,35 @@
         "tooltip-icon-size": 24
       },
       {
-        "type": "audio-out",
-        "tooltip": true,
-        "tooltip-icon-size": 24
-      },
-      {
         "type": "audio-in",
         "tooltip": true,
         "tooltip-icon-size": 24
       }
+    ],
+    "ignore-monitor": false,
+    "ignore": [],
+      // {
+      // 	"type": "audio-in",
+      // 	"name": "cava"
+      // },
+      // {
+      // 	"type": "screenshare",
+      // 	"name": "obs"
+      // }
+    // ],
+  },
+
+  "privacy#sink": {
+    "name": "sink",
+    "icon-spacing": 4,
+    "icon-size": 18,
+    "transition-duration": 250,
+    "modules": [
+      {
+        "type": "audio-out",
+        "tooltip": true,
+        "tooltip-icon-size": 24
+      },
     ],
     "ignore-monitor": false,
     "ignore": [],
