--- a/.config/waybar-river/config.jsonc
+++ b/.config/waybar-river/config.jsonc
@@ -179,14 +179,14 @@
         "interval": 1,
     },
     "cpu": {
-        "interval": 5,
-        "format": "⏲ {usage}%",
-        "max-length": 10
+        "interval": 3,
+        "format": "{icon}{usage:3}%",
+        "format-icons": ["⊘ "],
+        "icon-size": 12,
     },
     "memory": {
         "interval": 30,
-        "format": " {used}GiB",
-        "max-length": 10
+        "format": " {used:5}GiB",
     },
     "custom/media": {
         "interval": 30,
