.config/waybar: adjust battery

--- a/.config/waybar-river/config.jsonc
+++ b/.config/waybar-river/config.jsonc
@@ -166,11 +166,13 @@
             "warning": 30,
             "critical": 20
         },
-        "format": "{icon}  {capacity}%",
+        "format": "{icon}  {capacity}% {power}W",
         "format-charging": " {capacity}%",
         "format-plugged": " {capacity}%",
         "format-alt": "{time} {icon}",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["", "", "", "", ""],
+        // "full-at": 79,
+        "interval": 3,
     },
   "tray":{
     "icon-size":18,
